<resources>
    <string name="app_name">Inbox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_all">Tất cả hộp thư đến</string>
    <string name="nav_send">Đã gửi</string>
    <string name="nav_star">Có gắn dấu sao</string>
    <string name="nav_trash_box">Thư rác</string>
    <string name="nav_trash">Thùng rác</string>
    <string name="nav_settings">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_inbox">Hộp thư đến</string>
    <string name="nav_home">Trang chủ</string>
</resources>