<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_menu_all"
            android:title="@string/nav_inbox"/>

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_send" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/nav_star" />
        <item
            android:id="@+id/nav_trash_box"
            android:icon="@drawable/ic_menu_trash_box"
            android:title="@string/nav_trash_box" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_trash"
            android:title="@string/nav_trash" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />

    </group>
</menu>